# pyxva

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  TODO.md  demo.py  pyproject.toml
docs/: xva.html  xva.md
docs/designs/: risk-analytics-v1.md
src/pyxva/: __init__.py  demo.py
src/pyxva/backtest/: __init__.py  engine.py
src/pyxva/core/: conventions.py  market_data.py  paths.py  stateful.py  yield_curve.py
src/pyxva/exposure/: __init__.py  bilateral.py  hazard_curve.py  netting.py  saccr.py
src/pyxva/exposure/margin/: im.py  vm.py
src/pyxva/exposure/streaming/: __init__.py  engine.py  vm_stepper.py
src/pyxva/models/commodity/: schwartz1f.py  schwartz2f.py
src/pyxva/pipeline/: config.py  engine.py  result.py  shared_memory.py
src/pyxva/portfolio/: __init__.py  agreement.py  trade.py
src/pyxva/pricing/: base.py
src/risk_analytics/: __init__.py  demo.py
src/risk_analytics/backtest/: __init__.py  engine.py  metrics.py  result.py
src/risk_analytics/core/: __init__.py  grid.py  schedule.py  yield_curve.py
src/risk_analytics/exposure/: bilateral.py  netting.py
src/risk_analytics/pipeline/: config.py  engine.py
src/risk_analytics/portfolio/: agreement.py  trade.py
tests/: test_backtest.py  test_bilateral.py  test_conventions.py  test_exposure.py  test_market_data.py  test_models.py  test_paths_interpolation.py  test_pipeline.py  test_price_at.py  test_pricing.py  test_serialization.py  test_shared_memory.py  test_sparse_grid.py  test_stateful.py  test_streaming_exposure.py  test_trade_factory_register.py  test_xva_v11.py  test_yield_curve.py
(+18 files in other folders)
